[package]
name = "alamgu-async-block"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-log = { git = "https://github.com/alamgu/ledger-log", branch = "y333/rust_sdk_single_crate" }
pin-project = "1.0.10"
ledger_device_sdk = { version = "1.28.0", features=["sys"] }
ledger-parser-combinators = { git = "https://github.com/alamgu/ledger-parser-combinators", branch="y333/rust_sdk_single_crate" }

[features]
default = []
prompts = []

[patch.crates-io]
ledger_device_sdk = {git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git" }